[package]
name = "cnctd_mta"
version = "0.1.0"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Methods to receive MTA subway info"
repository = "https://github.com/Connected-Dot/cnctd_mta"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
