[package]
name = "cnctd_mta"
version = "0.1.2"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Methods to receive MTA subway info"
repository = "https://github.com/Connected-Dot/cnctd_mta"
license = "MIT"
keywords = ["module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
futures = "0.3.30"
gtfs-rt = "0.5.0"
prost = "0.12.4"
prost-derive = "0.12.4"
reqwest = "0.12.3"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
